--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -22,9 +22,9 @@ phpSettings.date.timezone = "Europe/Rome"
 
 ;database
 resources.db.adapter = PDO_MYSQL
-resources.db.params.host = localhost
+resources.db.params.host = 127.0.0.1
 resources.db.params.username = root
-resources.db.params.password = ""
+resources.db.params.password = "root"
 resources.db.params.dbname = tecwebdb
 
 
